fix: fixed navbar too big for the screen

--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -8,7 +8,7 @@
 
 nav {
     background-color: var(--navbar-background-color);
-    padding: 1.5em;
+    padding: 1.5em 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
